unchecked list - local storage, copy
keeping track of unchecked roles

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 <body>
     <div>
         <div class="gameGrid" id="rep">
-            
+
         </div>
+
+        <div id="unchecked">
+
+        </div>
+
         <div>
-            <button>Reset</button>
+            <button>Copy</button>
+            <button id="reset">Reset</button>
         </div>
+
+        <div class="copyAck" id="copyAck">Text has been copied</div>
     </div>
 </body>
 
