clipboard btn instead of copy text
svg, changed color, reordering

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
         <div class="gameGrid" id="rep">
 
         </div>
+        <div class="bottomCont">
+            <div class="uncheckCont">
+                <div id="unchecked">
 
-        <div id="unchecked">
+                </div>
 
+                <div>
+                    <button id="copyBtn">
+                        <img src="clipboard-regular.svg" class="copy" />
+                    </button>
+                </div>
+            </div>
+
+            <button id="reset">RESET</button>
         </div>
-
-        <div>
-            <button>Copy</button>
-            <button id="reset">Reset</button>
-        </div>
-
-        <div class="copyAck" id="copyAck">Text has been copied</div>
     </div>
 </body>
 
